--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "color-hash": "^2.0.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.3",
     "socket.io": "2",
     "ws": "^8.11.0"
